add botão dark mode

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Felipe Silva</title>
 </head>
-
 <body>
     <main class="secao-principal">
         <section class="topo">
-            <button class="botao-lampada">
-                <img src="./assets/light-bulb.svg" alt="lampada.svg">
-            </button>
+         
             <img class="foto-perfil" src="https://media.licdn.com/dms/image/C4E03AQHiOqlHWtxH-w/profile-displayphoto-shrink_800_800/0/1534425874168?e=1685577600&v=beta&t=cG2Arn25KahZoW2IpPXCK_qQmHMbO5zLA6tfyutLk8c" alt="felipe-logo">
             
             <h2 class="nome">Felipe Silva</h2>
+            <div id="botao-switch" onclick="toggleMode()">
+                <button></button>
+                <span></span>
+            </div>
             <h4 class="tecnologias">Desenvolvedor Web | JavaScript | Fluig</h4>
         </section>
 
@@ -57,6 +58,5 @@
         <p href="">
             <i class="ri-send-plane-fill message-icon"></i>
         </p>
-        <p class="rodape__p3">2023 &copy Todos os direitos reservados</p>
     </footer>
 </html>
