suavizando background e slide do btSwitch

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
             <img class="foto-perfil" src="./assets/img_topo.JPG" alt="felipe-img">
             
             <h2 class="nome">Felipe Silva</h2>
-            <div id="botao-switch" onclick="toggleMode()">
+            <label id="switch" onclick="toggleMode()">
+                 <input type="checkbox">
                 <button></button>
-                <span></span>
-            </div>
+                <span id="slide"></span>
+            </label>
             <h4 class="tecnologias">Desenvolvedor Web | JavaScript | Fluig</h4>
         </section>
 
         <section class="box-links">
 
-            <a class="links" href="https://github.com/iamfelipeS" target="_blank" rel="noopener noreferrer">
+            <a class="links" href="https://github.com/iamfelipeS?tab=repositories" target="_blank" rel="noopener noreferrer">
                 <i class="ri-user-2-fill box-links__icon"></i>
                 Portfólio
             </a>
